[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Colman Humphrey <colmanhumphrey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# don't need to do it exactly this way, following convention
# happy to use package.name default here, so we don't specify
# a name field
path = "src/lib.rs"

[[bin]]
# double brackets because it's an array here -
# can have multiple binaries if we want
path = "src/main.rs"
name = "app"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
serde = { version = "1", features = ["derive"] }
config = "0.10.1"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
reqwest = { version = "0.10", default-features = false, features = [ "json", "rustls-tls" ] }
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.15", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.7"
tracing-log = "0.1.1"
tracing-actix-web = "0.2.1"
serde-aux = "1.1.0"
unicode-segmentation = "1.7.1"
validator = "0.12.0"

[dependencies.sqlx]
version = "0.4.1"
default-features = false
features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline" ]

[dev-dependencies]
tokio = "0.2.22"
lazy_static = "1.4.0"
claim = "0.4.0"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
